--- a/src/app/components/partials/header/header.component.css
+++ b/src/app/components/partials/header/header.component.css
@@ -1,7 +1,6 @@
 .header-container{
   box-shadow: 0 0.5px 10px black;
   padding:0.5rem;
-  width:100%;
 }
 
 .auth-header-list{
